--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e" 
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +25,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
