--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mongoose": "^5.3.12",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
     "time-ago-pipe": "^1.3.2",
