--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
+    "mongoose-unique-validator": "^2.0.2",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
     "time-ago-pipe": "^1.3.2",
