--- a/package.json
+++ b/package.json
@@ -12,24 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "bcryptjs": "^2.4.3",
+    "@angular/animations": "~7.1.0",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/http": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "express": "^4.16.4",
     "jquery": "^3.3.1",
-    "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.12",
-    "mongoose-unique-validator": "^2.0.2",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
     "time-ago-pipe": "^1.3.2",
@@ -37,9 +33,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular/cli": "^7.0.6",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
     "@types/bootstrap": "^4.1.2",
     "@types/debug": "0.0.31",
     "@types/jasmine": "~2.8.8",
@@ -58,6 +54,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.12",
+    "mongoose-unique-validator": "^2.0.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.4.0"
   }
 }
