--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "event-stream": "^3.3.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
