--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,9 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
     "mongoose-unique-validator": "^2.0.2"
+  },
+  "engines": {
+    "node": "~10.14.2",
+    "npm": "~6.4.1"
   }
 }
