--- a/package.json
+++ b/package.json
@@ -12,54 +12,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/http": "~7.1.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular/animations": "~7.2.7",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "~7.2.7",
+    "@angular/compiler": "~7.2.7",
+    "@angular/core": "~7.2.7",
+    "@angular/forms": "~7.2.7",
+    "@angular/http": "~7.2.7",
+    "@angular/platform-browser": "~7.2.7",
+    "@angular/platform-browser-dynamic": "~7.2.7",
+    "@angular/router": "~7.2.7",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "event-stream": "^3.3.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.4.0",
     "time-ago-pipe": "^1.3.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "^7.0.6",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
+    "@angular-devkit/build-angular": "^0.13.3",
+    "@angular/cli": "^7.3.3",
+    "@angular/compiler-cli": "^7.2.7",
+    "@angular/language-service": "~7.2.7",
     "@types/bootstrap": "^4.1.2",
     "@types/debug": "0.0.31",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.22",
     "@types/node": "~8.9.4",
+    "bcryptjs": "^2.4.3",
     "codelyzer": "~4.5.0",
+    "express": "^4.16.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "jsonwebtoken": "^8.4.0",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mongoose": "^5.3.12",
+    "mongoose-unique-validator": "^2.0.2",
     "nodemon": "^1.18.6",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.12",
-    "mongoose-unique-validator": "^2.0.2",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.4.0"
+    "typescript": "~3.2.4"
   }
 }
