--- a/package.json
+++ b/package.json
@@ -12,31 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.7",
+    "@angular/animations": "~8.2.0",
     "@angular/cdk": "^7.3.3",
-    "@angular/common": "~7.2.7",
-    "@angular/compiler": "~7.2.7",
-    "@angular/core": "~7.2.7",
-    "@angular/forms": "~7.2.7",
-    "@angular/http": "~7.2.7",
-    "@angular/platform-browser": "~7.2.7",
-    "@angular/platform-browser-dynamic": "~7.2.7",
-    "@angular/router": "~7.2.7",
+    "@angular/common": "~8.2.0",
+    "@angular/compiler": "~8.2.0",
+    "@angular/core": "~8.2.0",
+    "@angular/forms": "~8.2.0",
+    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/router": "~8.2.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "event-stream": "^3.3.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "^1.14.4",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.2",
     "time-ago-pipe": "^1.3.2",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.3",
-    "@angular/cli": "^7.3.3",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "~7.2.7",
+    "@angular-devkit/build-angular": "~0.802.0",
+    "@angular/cli": "^8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "~8.2.0",
     "@types/bootstrap": "^4.1.2",
     "@types/debug": "0.0.31",
     "@types/jasmine": "~2.8.8",
@@ -44,12 +43,12 @@
     "@types/jquery": "^3.3.22",
     "@types/node": "~8.9.4",
     "bcryptjs": "^2.4.3",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "express": "^4.16.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.4.0",
-    "karma": "^4.0.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
@@ -60,6 +59,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.4"
+    "typescript": "~3.5.3"
   }
 }
