--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/cdk": "^7.3.3",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
+    "@angular/animations": "~9.0.0-next.0",
+    "@angular/cdk": "^8.1.2",
+    "@angular/common": "~9.0.0-next.0",
+    "@angular/compiler": "~9.0.0-next.0",
+    "@angular/core": "~9.0.0-next.0",
+    "@angular/forms": "~9.0.0-next.0",
+    "@angular/platform-browser": "~9.0.0-next.0",
+    "@angular/platform-browser-dynamic": "~9.0.0-next.0",
+    "@angular/router": "~9.0.0-next.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -34,8 +34,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.0",
     "@angular/cli": "^8.2.0",
-    "@angular/compiler-cli": "^8.2.0",
-    "@angular/language-service": "~8.2.0",
+    "@angular/compiler-cli": "^9.0.0-next.0",
+    "@angular/language-service": "~9.0.0-next.0",
     "@types/bootstrap": "^4.1.2",
     "@types/debug": "0.0.31",
     "@types/jasmine": "~2.8.8",
